Fixed bug #50219 (soap call Segmentation fault on a redirected url).